src/layouts/repo_list.css
:root {
	--main-accent: #FF5555;
	--border-disabled-dark: #D9D9D9;
	--disabled-light: #F9F9F9;
	--background-color: #FFFFFF;
	--text-default: #000000;
	--text-hint: #7E7E7E;
	--star-accent: #FF9432;
	--shadow: rgba(182, 182, 182, 0.25);
	--link-hover: #208FBF;
	--border-radius: 6px;
}

body {
	font-family: 'Roboto', sans-serif;
	font-style: normal;
	font-size: 14px;
}

/*
	Блок списка репозиториев
*/

.git-repo-list {
	display: grid;
	row-gap: 16px;
	justify-content: center;
	grid-template-columns: 357px;
}

/*
	Блок поиска
*/

.git-repo-search {
	display: flex;
	justify-content: space-between;
	width: 100%;
	margin-bottom: 0;
}

.git-repo-search__input-container {
	width: 80%;
	display: flex;
}

.git-repo-search__input {
	border: 1px solid var(--border-disabled-dark);
	border-radius: var(--border-radius);
	padding-left: 12px;
	flex-grow: 1;
	font: inherit;
}

.git-repo-search__input:focus {
	outline: none;
	border-color: var(--main-accent);
}

.git-repo-search__input:disabled {
	background-color: var(--disabled-light);
}

.git-repo-search__button {
	background-color: var(--main-accent);
	border-radius: var(--border-radius);
	border-style: none;
	cursor: pointer;
	padding: 16px;
}

.git-repo-search__icon {
	width: 18px;
	height: 18px;
}

.git-repo-search__button:hover {
	opacity: 0.7;
}

.git-repo-search__button:disabled {
	cursor: default;
	background-color: var(--border-disabled-dark);
}

.git-repo-search__button:disabled:hover {
	opacity: 1;
}

/*
	Блок карточки репозитория
*/

.git-repo-tile {
	display: flex;
	border-radius: var(--border-radius);
	border: 1px solid var(--border-disabled-dark);
	align-items: center;
	color: var(--text-hint);
	box-sizing: border-box;
	width: 100%;
	padding: 12px;
}

.git-repo-tile:hover {
	box-shadow: 0px 2px 6px var(--shadow);
	cursor: pointer;
}

.git-repo-tile__avatar {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 80px;
	height: 80px;
	border-radius: 50%;
	background-size: cover;
	background-position: center;
	background-color: var(--main-accent);
	font-size: 40px;
	font-weight: 700;
	color: var(--background-color);
	text-align: center;
	flex-shrink: 0;
	margin-right: 12px;
}

.git-repo-tile__content {
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
	flex-grow: 1;
}

.git-repo-tile__repo-name {
	max-width: 100%;
	color: var(--text-default);
	font-weight: 700;
	font-size: 16px;
}

.git-repo-tile__org-name {
	max-width: 100%;
	margin: 4px 0 0 0;
}

.git-repo-tile__org-name:hover {
	color: var(--link-hover);
}

.git-repo-tile__info-container {
	margin-top: 4px;
	display: flex;
	align-items: center;
}

.git-repo-tile__star-image {
	color: var(--star-accent);
	vertical-align: text-top;
}

.git-repo-tile__date {
	margin-left: 20px;
}

